[package]
name = "orderbook_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
ckb-merkle-mountain-range = { path = "/home/ubuntu/Dropbox/WEB/Hackathons/ZK_Hack/merkle-mountain-range" }
sha2 = "0.9"